--- a/src/app/components/home-components/home-content/home-content.component.html
+++ b/src/app/components/home-components/home-content/home-content.component.html
@@ -49,21 +49,27 @@
 
     </div>
     <div class="mandate">
+        <div class="mandate-desc">
+            <div class="mandate-heading">
+                <h2>Mandate</h2>
+            </div>
+            <div>
+                <p>
+                The broad mandate of this organisation is to have holistic development of Women and Children. As a nodal
+                Ministry for the advancement of women and children, the Ministry formulates plans, policies and programmes;
+                enacts/ amends legislation, guides and coordinates the efforts of both governmental and non-governmental
+                organisations working in the field of Women and Child Development. Besides, playing its nodal role, the NGOs
+                implements certain innovative programmes for women and children. These programmes cover welfare and support
+                services, training for employment and income generation, awareness generation and gender sensitization.
+                These programmes play a supplementary and complementary role to the other general developmental programmes
+                in the sectors of health, education, rural development etc. All these efforts are directed to ensure that
+                women are empowered both economically and socially and thus become equal partners in national development
+                along with men.
+                </p>
+            </div>
+        </div>
         <div>
-            <h2>Mandate</h2>
+            <img src="../../../../assets/images/WE-Hand.png" />
         </div>
-        <div class="content pad">
-            The broad mandate of this organisation is to have holistic development of Women and Children. As a nodal
-            Ministry for the advancement of women and children, the Ministry formulates plans, policies and programmes;
-            enacts/ amends legislation, guides and coordinates the efforts of both governmental and non-governmental
-            organisations working in the field of Women and Child Development. Besides, playing its nodal role, the NGOs
-            implements certain innovative programmes for women and children. These programmes cover welfare and support
-            services, training for employment and income generation, awareness generation and gender sensitization.
-            These programmes play a supplementary and complementary role to the other general developmental programmes
-            in the sectors of health, education, rural development etc. All these efforts are directed to ensure that
-            women are empowered both economically and socially and thus become equal partners in national development
-            along with men.
-        </div>
-
     </div>
 </div>
