--- a/src/app/components/home-components/legislation-and-policy/legislation-and-policy.component.html
+++ b/src/app/components/home-components/legislation-and-policy/legislation-and-policy.component.html
@@ -2,8 +2,12 @@
 <!-- <h1>Changes made by Ishwar</h1> -->
 <div class="box1">
         <div class="left">
-            <div class="scheme"></div>
-            <div class="main-banner"></div>
+            <div class="scheme">
+                <img src="../../../../assets/images/schemee.jpg" />
+            </div>
+            <div class="main-banner">
+                <img src="../../../../assets/images/policy2.jfif" />
+            </div>
         </div>
         <div class="box2">
             <div>
