--- a/src/app/components/home-components/legislation-and-policy/legislation-and-policy.component.css
+++ b/src/app/components/home-components/legislation-and-policy/legislation-and-policy.component.css
@@ -27,7 +27,6 @@
         align-items: center;
     }
     .main-banner {
-        background-image: url('../../../../assets/images/policy2.jfif');
         margin-left: 80px;
         margin-top:30px;
         background-repeat: no-repeat;
@@ -36,10 +35,14 @@
         object-fit:contain;
         border-radius: 20px;
     }
+    .main-banner img, .scheme img {
+        width: 200px;
+        margin-top: 30px;
+        border-radius: 10px;
+    }
     .scheme{
-        background-image: url('../../../../assets/images/scheme.jfif');
         margin-top: 60px;
-        margin-left:40px;
+        margin-left:80px;
         flex:1;
         background-repeat: no-repeat;
         object-fit:contain;
