faq and about-us done

--- a/src/app/components/home-components/faq/faq.component.html
+++ b/src/app/components/home-components/faq/faq.component.html
@@ -1,1 +1,23 @@
-<p>faq works!</p>
+<!-- <p>faq works!</p> -->
+<div class="parent">
+<div class="left">
+<img src="../../../../assets/images/images.jfif" alt="">
+</div>
+<div class="right">
+    <div class="head"><h1>Frequently Asked Questions</h1></div>
+    <li class="ques" style="list-style-type:decimal">I forgot my password. How do I obtain it?</li>
+    <div class="ans">Click forgot password in the login page to have your password e-mailed to you.
+        If you experience difficulty, you may also contact the support team</div>
+        <br>
+    <li class="ques" style="list-style-type:decimal">I forgot my Username. How do I obtain it?</li>
+    <div class="ans">Click forgot username to have your username e-mailed to you.
+        If you experience difficulty, you may also contact the support team.</div>
+        <br>
+    <li class="ques" style="list-style-type:decimal">I’m a new visitor to ASQ. How do I login?</li>
+    <div class="ans">As you explore our website you may encounter content that is only accessible to Trainee Members and registered NGOs. In case you have encounter this type of content, a login screen displays and you need to create an account. Upon completing the registration process you will be able to login using the email and password you entered during account creation. For return visits enter your Username and Password in the login box</div>
+    <br>
+    <li class="ques" style="list-style-type:decimal">I’m a new visitor to ASQ. How do I login?</li>
+    <div class="ans">As you explore our website you may encounter content that is only accessible to Trainee Members and registered NGOs. In case you have encounter this type of content, a login screen displays and you need to create an account. Upon completing the registration process you will be able to login using the email and password you entered during account creation. For return visits enter your Username and Password in the login box</div>
+    <br>
+</div>
+</div>
