--- a/src/app/components/home-components/footer/footer.component.html
+++ b/src/app/components/home-components/footer/footer.component.html
@@ -1,3 +1,28 @@
 <footer>
-    Footer Not Ready
+    <div>
+        <div style="color: #fa77c1">Women Empowerment</div>
+        <div></div>
+    </div>
+    <div>
+        <div>
+            <div class="owned-by">
+                <div>
+                    <p>Website Content Owned by Ministry of Women and Child Development, GOI</p>
+                    <p>Designed, Developed and Hosted by <a style="color:rgb(107, 176, 254)" target="_blank" href="https://www.lntinfotech.com/">Larsen & Toubro Infotech Limited</a></p>
+                    <p>Last Updated: 3 Aug 2022</p>
+                </div>
+            </div>
+        </div>
+        <div></div>
+        <div></div>
+    </div>
 </footer>
+<nav class="footer-navigations">
+    <a href="">Webiste Policies</a> |
+    <a href="">Help</a> |
+    <a href="">Feedback</a> |
+    <a href="">Contact Us</a> | 
+    <a href="">Visitor Analytics</a> |
+    <a href="">Terms & Conditions</a> |
+    <a href="">Disclaimer</a>
+</nav>
