--- a/src/app/components/step-dashboard-components/registration/registration.component.css
+++ b/src/app/components/step-dashboard-components/registration/registration.component.css
@@ -23,7 +23,7 @@ nav .active {
 }
 
 nav a:hover {
-    background: rgb(54, 110, 178, 0.2);
+    /* background: rgb(54, 110, 178, 0.2); */
 }
 
 nav .active:hover {
