--- a/src/app/components/home-components/home-content/home-content.component.html
+++ b/src/app/components/home-components/home-content/home-content.component.html
@@ -1,4 +1,4 @@
-<div class="main-banner">
+<div class="main-banner" style="background-image: url('{{bannerImage}}');">
     <div class="overlay">
         <div>
         </div>
@@ -6,6 +6,21 @@
             <h1>We are Women!</h1>
             <h2>We can do it!</h2>
         </div>
+    </div>
+    <span class="previous" (click)="previousImage()">
+        <svg  style="width:70px;height:70px" viewBox="0 0 24 24">
+            <path fill="currentColor" d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z" />
+        </svg>
+    </span>
+    <span class="next" (click)="nextImage()">
+        <svg style="width:70px;height:70px" viewBox="0 0 24 24">
+            <path fill="currentColor" d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" />
+        </svg>
+    </span>
+    <div class="switch-banner">
+        <span></span>
+        <span></span>
+        <span></span>
     </div>
 </div>
 <!-- <p>about-us works!</p> -->
