fund and criteria added

--- a/src/app/components/ngo-dashboard-components/criteria/criteria.component.html
+++ b/src/app/components/ngo-dashboard-components/criteria/criteria.component.html
@@ -1,12 +1,48 @@
 <div class="route-content-wrapper">
 
     <step-dashboard-content-header>
-        <div>Criteria</div>
+        <div class="head">Criteria</div>
         <div></div>
     </step-dashboard-content-header>
     
     <div class="dashboard-content">
-        <div>
+        <div class="body">
+            <div class="box1">
+                <li class="bullet">
+                    Voluntary Institutions/Societies/Trusts must be registered as a society under Indian Societies Act (XII of 1860) or as a Public Trust under the law in force. Should have been in existence for at least 3 years and the grant will not be given for more than 3 consecutive years.
+                </li>
+            </div>
+            <br>
+            <div class="box1">
+                <li class="bullet">
+                    It should have a well-defined constitution and its work should have for specific Criteria for engaged in its tradition facilities, which the direct society under will not be reported as satisfactory by the respective government. It should not run for the profit of the individual.
+                </li>
+            </div>
+            <br>
+            <div class="box1">
+                <li class="bullet">
+                    It should be able to maintain the Museum financially or otherwise and should have enough facilities, resources, and personnel.
+                </li>
+                
+            </div>
+            <br>
+            <div class="box1">
+                <li class="bullet">
+                    The NGO should work in close coordination with the nodal and site officers designated for the purpose. The specific eligibility criteria for se lection of Noble NGO are as under ‐
+                    Eligibility Criteria:
+                </li>
+                <br>
+                <ol>
+                    <li class="b">The interested organizations/firms should be registered under relevant Acts/Rules.</li>
+                    <li class="b">They should have their office network in the district where they apply to be the Lead NGO.</li>
+                    <li class="b">They must have a strong presence and good track of record in the district.</li>
+                    <li class="b">They should have had to experience a similar nature of projects handled in the past.</li>
+                    <li class="b">They should have at least Rs. 10 lakhs turn over per annum</li>
+                    <li class="b">They should have enough qualified and experienced staff who are capable of handling technical and managerial issues.</li>
+                    <li class="b">Sensitivity towards group action/conflict resolution and equity for the marginalized community. visit ngo consultancy to gain knowledge for registration of organization.</li>
+                </ol>
+            </div>
+            <br>
         </div>
     </div>
     
