--- a/src/app/components/ngo-dashboard-components/funding-norms/funding-norms.component.html
+++ b/src/app/components/ngo-dashboard-components/funding-norms/funding-norms.component.html
@@ -7,6 +7,51 @@
     
     <div class="dashboard-content">
         <div>
+            <div class="inline">
+            <div class="left_image">
+                <img src="../../../../assets/images/fund.png" alt="">
+            </div>
+           <div class="right">
+            NGOs can accept donations from private individuals, for-profit companies, charitable foundations, and governments, whether local, state, federal, or even foreign. As nonprofit entities, they also can charge membership dues and sell goods and services.
+           </div>
+            </div>
+            <br>
+            <div class="inline">
+                <div class="left_image">
+                    <img src="../../../../assets/images/fund.png" alt="">
+                </div>
+               <div class="right">
+                12A and 80G are specific registrations granted by the income tax department to NGOs to allow tax exemption and deduction on donations. An NGO is allowed to retain its earlier bank account and utilise funds lying with it. But new donations can now be received only after the account with SBI is active.
+               </div>
+                </div>
+                <br>
+                <div class="inline">
+                    <div class="left_image">
+                        <img src="../../../../assets/images/fund.png" alt="">
+                    </div>
+                   <div class="right">
+                    Any organisation seeking registration under the Foreign Contribution (Regulation) Act (FCRA) must have operated for at least three years and spent “a minimum amount of Rs 15 lakh on its core activities for the benefit of society during the last three financial years”.
+                   </div>
+                    </div>
+                    <br>
+                    <div class="inline">
+                        <div class="left_image">
+                            <img src="../../../../assets/images/fund.png" alt="">
+                        </div>
+                       <div class="right">
+                        Any organisation seeking prior permission for receiving a “specific amount from a specific donor for carrying out specific activities or projects” shall “submit a specific commitment letter from the donor indicating the amount of foreign contribution and the purpose for which it is proposed to be given
+                       </div>
+                        </div>
+                        <br>
+                    <div class="inline">
+                        <div class="left_image">
+                            <img src="../../../../assets/images/fund.png" alt="">
+                        </div>
+                       <div class="right space">
+                        The Centre has said that if the value of foreign contribution is over Rs 1 crore, it may be given in installments “provided that the second and subsequent installment shall be released after submission of proof of utilisation of 75 per cent of the foreign contribution received in the previous installment and after field inquiry of the utilisation of foreign contribution.”
+                       </div>
+                        </div>
+                        <br>
         </div>
     </div>
     
