--- a/src/app/components/ngo-dashboard-components/funding-norms/funding-norms.component.css
+++ b/src/app/components/ngo-dashboard-components/funding-norms/funding-norms.component.css
@@ -3,11 +3,12 @@
     padding-left:5px;
     flex:0.5;
     align-items:center;
+    display: flex;
 }
 img {
     width: 100%;
     border-radius: 5px;
-    border-style: groove;
+    margin: 10px;
 }
 .right{
     flex:7;
@@ -25,7 +26,7 @@ img {
     border-radius: 10px;
     border-bottom: grey solid 5px;
     border-right: grey solid 5px;;
-    background: rgb(44, 44, 44);
+    background: rgb(75, 75, 75);
 }
 .space{
     padding-top:10px;
