--- a/src/styles.css
+++ b/src/styles.css
@@ -48,7 +48,7 @@ p {
 
 .form-row {
     display: flex;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 .form-row .form-col {
     margin-right: 20px;
@@ -229,4 +229,39 @@ th, td {
     padding: 10px;
 
     border-bottom: 0.5px solid rgba(0, 0, 0, 0.3);
+}
+
+.success-message {
+    padding: 10px;
+    color: green;
+    background: rgba(0, 255, 0, 0.1);
+    border: 0.5px solid green;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.error-message {
+    padding: 7px;
+    color: red;
+    background: rgba(255, 0, 0, 0.1);
+    border: 0.5px solid red;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.success-message svg,
+.error-message svg {
+    margin-right: 5px;
+}
+
+.success-message svg {
+    color: green;
+}
+
+.error-message svg {
+    color: red;
 }
