--- a/src/app/components/step-dashboard-components/forms/step-personal-details/step-personal-details.component.html
+++ b/src/app/components/step-dashboard-components/forms/step-personal-details/step-personal-details.component.html
@@ -46,7 +46,13 @@
                 <mat-label>Pan</mat-label>
                 <input formControlName="Pan" matInput >
             </mat-form-field>
-            
+            <div *ngIf="submitted && personalDetails.controls['Pan'].invalid" class="form-error">
+                <svg style="width:15px;height:15px" viewBox="0 0 24 24">
+                    <path fill="currentColor" d="M10 3H14V14H10V3M10 21V17H14V21H10Z" />
+                </svg>
+                <span *ngIf="personalDetails.controls['Pan'].errors!['required']">PAN required</span>
+                <span *ngIf="personalDetails.controls['Pan'].errors!['pattern']">Invalid PAN</span>
+            </div>
         </div>
         <div class="form-col">
             <mat-form-field appearance="fill">
@@ -57,6 +63,12 @@
                   </mat-option>
                 </mat-select>
               </mat-form-field>
+              <div *ngIf="submitted && personalDetails.controls['MaritalStatus'].invalid" class="form-error">
+                <svg style="width:15px;height:15px" viewBox="0 0 24 24">
+                    <path fill="currentColor" d="M10 3H14V14H10V3M10 21V17H14V21H10Z" />
+                </svg>
+                <span *ngIf="personalDetails.controls['MaritalStatus'].errors!['required']">Marital status required</span>
+            </div>
         </div>
     </div>
 
@@ -66,6 +78,13 @@
                 <mat-label>Religion</mat-label>
                 <input formControlName="Religion" matInput >
             </mat-form-field>
+            <div *ngIf="submitted && personalDetails.controls['Religion'].invalid" class="form-error">
+                <svg style="width:15px;height:15px" viewBox="0 0 24 24">
+                    <path fill="currentColor" d="M10 3H14V14H10V3M10 21V17H14V21H10Z" />
+                </svg>
+                <span *ngIf="personalDetails.controls['Religion'].errors!['required']">Religion required</span>
+                <span *ngIf="personalDetails.controls['Religion'].errors!['pattern']">Invalid Religion</span>
+            </div>
         </div>
         <div class="form-col">
             <mat-form-field appearance="fill">
@@ -76,6 +95,12 @@
                 </mat-option>
               </mat-select>
             </mat-form-field>
+            <div *ngIf="submitted && personalDetails.controls['Category'].invalid" class="form-error">
+                <svg style="width:15px;height:15px" viewBox="0 0 24 24">
+                    <path fill="currentColor" d="M10 3H14V14H10V3M10 21V17H14V21H10Z" />
+                </svg>
+                <span *ngIf="personalDetails.controls['Category'].errors!['required']">Category required</span>
+            </div>
         </div>
     </div>
 
@@ -94,6 +119,12 @@
                 </mat-option>
               </mat-select>
             </mat-form-field>
+            <div *ngIf="submitted && personalDetails.controls['DisabilityType'].invalid" class="form-error">
+                <svg style="width:15px;height:15px" viewBox="0 0 24 24">
+                    <path fill="currentColor" d="M10 3H14V14H10V3M10 21V17H14V21H10Z" />
+                </svg>
+                <span *ngIf="personalDetails.controls['DisabilityType'].errors!['required']">Disability type required</span>
+            </div>
         </div>
     </div>
 
