--- a/src/app/components/step-dashboard-components/forms/step-address-details/step-address-details.component.html
+++ b/src/app/components/step-dashboard-components/forms/step-address-details/step-address-details.component.html
@@ -1,4 +1,7 @@
 <h3>Address Details</h3>
+<error-message *ngIf="errorMessage">{{errorMessage}}</error-message>
+
+<success-message *ngIf="successMessage">{{successMessage}}</success-message>
 <form [formGroup]="addressDetails" (submit)="saveAddressDetails()">
 
     <div class="form-row">
